# research2repo

./: .env.example  .gitignore  .huggingface_space_config.yaml  CLEANUP_REPORT.md  DATAFLEX_ANALYSIS.md  DATAFLEX_IMPLEMENTATION.md  HUGGINGFACE_DEPLOYMENT.md  OMNISHOTCUT_ANALYSIS.md  OMNISHOTCUT_IMPLEMENTATION_COMPLETE.md  README.md  RESTRUCTURE_PLAN.md  TESTING_IMPROVEMENTS.md  config.py  gateway_adapter.py  main.py  pyproject.toml  pytest.ini  requirements.txt  research2repo_paper.html  research2repo_paper.tex  research2repo_paper.txt
.github/workflows/: deploy-docs.yml  markdown-link-check.yml  python-ci.yml  stale.yml
advanced/: __init__.py  cache.py  code_rag.py  config_generator.py  context_manager.py  debugger.py  devops.py  equation_extractor.py  evaluator.py  executor.py  test_generator.py
agents/: __init__.py  orchestrator.py
architecture/: __init__.py
architecture/agents/: __init__.py  base.py
architecture/base/: __init__.py  base_evaluator.py  base_generator.py  base_processor.py  base_provider.py  base_selector.py
architecture/core/: __init__.py  registry.py
architecture/evaluators/: __init__.py  reproducibility_evaluator.py  semantic_evaluator.py  syntax_evaluator.py
architecture/pipeline/: __init__.py  coder.py  file_analyzer.py  paper_parser.py  refiner.py  validator.py
architecture/processors/: pdfplumber_processor.py  pypdf_processor.py
architecture/providers/: __init__.py  anthropic_provider.py  cohere.py  gemini.py  huggingface.py  ollama.py  openai_provider.py  registry.py
architecture/selectors/: __init__.py  diversity_selector.py  importance_selector.py  random_selector.py
config/: components.yaml  config_manager.py  constants.py  pipeline_configs.yaml  provider_configs.yaml
core/: __init__.py  analyzer.py  architect.py  coder.py  file_analyzer.py  paper_parser.py  planner.py  refiner.py  validator.py
datasets/: __init__.py  synthetic_data_generator.py
datasets/benchmarks/: __init__.py
datasets/papers/: __init__.py
datasets/references/: __init__.py
datasets/sample_papers/: attention_paper.json  resnet_paper.json
docs/: index.html
examples/: README.md
prompts/: analyzer.txt  architect.txt  architecture_design.txt  auto_debug.txt  coder.txt  devops.txt  diagram_extractor.txt  equation_extractor.txt  file_analysis.txt  logic_design.txt  overall_plan.txt  reference_eval.txt  self_refine_refine.txt  self_refine_verify.txt  test_generator.txt  validator.txt
providers/: __init__.py  base.py  ollama.py  openai_provider.py  registry.py
research2repo/: __init__.py  cli.py  version.py
skills/: how_to_add_processor.md  how_to_add_provider.md  how_to_use.md
test_code/: inference.py
tests/: conftest.py
tests/integration/: test_full_pipeline.py
tests/mocks/: __init__.py
tests/mocks/mock_providers/: mock_anthropic.py  mock_gemini.py  mock_openai.py
tests/unit/: test_config_manager.py  test_mock_providers.py  test_synthetic_data.py
util/: visualization.py
web/: app.py
wiki/: API-Reference.md  Architecture-Overview.md  Data-Model.md  Deployment-and-DevOps.md  High-Level-Design.md  Home.md  Low-Level-Design.md  PaperCoder-Issues-Analysis.md  Pipeline-Stages-Deep-Dive.md  Prompt-Engineering-Guide.md  Provider-System-and-Configuration.md  Troubleshooting-and-FAQ.md  Usage-Guide.md  _Sidebar.md
